--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,5 +1,28 @@
 <%- include('partials/header'); -%>
 
-<h1>sign up</h1>
+<form action="">
+    <h2>Sign Up!</h2>
+    <label for="email">Email</label>
+    <input type="email" name="email" required>
+
+    <label for="password">password</label>
+    <input type="password" name="password" minlength="6" required>
+
+    <button>Sign up</button>
+</form>
+
+<script>
+    const form = document.querySelector('form');
+
+    form.addEventListener('submit', (e)=>{
+        e.preventDefault();
+
+        // get values from form
+        const email = form.email.value;
+        const password = form.password.value;
+
+        console.log(email, password);
+    });
+</script>
 
 <%- include('partials/footer'); -%>
