--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header'); -%>
 
-<form action="">
+<form action="" method="post">
     <h2>Sign Up!</h2>
     <label for="email">Email</label>
     <input type="email" name="email" required>
@@ -14,14 +14,18 @@
 <script>
     const form = document.querySelector('form');
 
-    form.addEventListener('submit', (e)=>{
-        e.preventDefault();
-
-        // get values from form
-        const email = form.email.value;
-        const password = form.password.value;
-
-        console.log(email, password);
+    form.addEventListener('submit', async(e)=>{
+        try{
+            const res = await fetch('/signup', {
+                method: 'POST',
+                body: JSON.stringify({ email, password }), 
+                headers: { 'Content-Type': 'application/json' }
+            });
+            const data = await res.json();
+            console.log(data);
+        }catch(err){
+            console.log(err);
+        }
     });
 </script>
 
