--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,6 +4,7 @@
     <h2>Sign Up!</h2>
     <label for="email">Email</label>
     <input type="email" name="email" required>
+    <div class="email error"></div>
 
     <label for="password">password</label>
     <input type="password" name="password" minlength="6" required>
@@ -13,16 +14,26 @@
 
 <script>
     const form = document.querySelector('form');
-
+    const emailError = document.querySelector('.email.error');
     form.addEventListener('submit', async(e)=>{
+        e.preventDefault();
+        const email = form.email.value;
+        const password = form.password.value;
+
         try{
             const res = await fetch('/signup', {
                 method: 'POST',
-                body: JSON.stringify({ email, password }), 
+                body: JSON.stringify({email, password}), 
                 headers: { 'Content-Type': 'application/json' }
             });
             const data = await res.json();
             console.log(data);
+            if(data.errors){
+                emailError.textContent = data;
+            }
+            if(data.user){
+                location.assign('/');
+            }
         }catch(err){
             console.log(err);
         }
