--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,24 +4,46 @@
     <h2>Login!</h2>
     <label for="email">Email</label>
     <input type="email" name="email" required>
+    <div class="email error"></div>
 
     <label for="password">password</label>
     <input type="password" name="password" minlength="6" required>
-
+    <div class="password error"></div>
     <button>Login</button>
 </form>
-
 <script>
     const form = document.querySelector('form');
+    const emailError = document.querySelector('.email.error');
+    const passwordError = document.querySelector('.password.error');
 
-    form.addEventListener('submit', (e)=>{
+    form.addEventListener('submit', async(e)=>{
         e.preventDefault();
 
-        // get values from form
+        //reset error 
+        emailError = '';
+        passwordError = '';
+
+
         const email = form.email.value;
         const password = form.password.value;
 
-        console.log(email, password);
+        try{
+            const res = await fetch('/login', {
+                method: 'POST',
+                body: JSON.stringify({email, password}), 
+                headers: { 'Content-Type': 'application/json' }
+            });
+            const data = await res.json();
+            console.log(data);
+            if(data.errors){
+                emailError.textContent = data;
+            }
+            if(data.user){
+                location.assign('/');
+            }
+        }catch(err){
+            console.log(err);
+        }
     });
 </script>
 
